Add guava dependency to pom.xml