@@ -7,6 +7,15 @@
     <groupId>org.example</groupId>
     <artifactId>generics-homework</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.0-jre</version>
+        </dependency>
+
+    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -14,37 +23,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-<!--                    <source>14</source>-->
-<!--                    <target>14</target>-->
                     <release>14</release>
                     <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <!-- Build an executable JAR -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <archive>
-                        <manifestFile>${project.url}/META-INF/MANIFEST.MF</manifestFile>
-<!--                        <manifest>-->
-<!--                            <addClasspath>true</addClasspath>-->
-<!--&lt;!&ndash;                            <classpathPrefix>lib/</classpathPrefix>&ndash;&gt;-->
-<!--                            <mainClass>student.Main</mainClass>-->
-<!--                        </manifest>-->
-                    </archive>
-
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <configuration>
-                    <release>14</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                    <mainClass>student.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
